symposium site so far

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -21,6 +21,7 @@
  *= require field_notes
  *= require fn_mobile
  *= require exhibitions
+ *= require symposium
  *= require jquery-ui
  *= require jquery-overrides
  *= require mobile
