--- a/app/views/pages/show.html.haml
+++ b/app/views/pages/show.html.haml
@@ -1,7 +1,8 @@
 .page_container
-  .row
-    .medium-8.small-centered.columns.medium-offset-2
-      %h2= @page.title
+  - unless @page.slug == 'schedule'
+    .row
+      .medium-8.small-centered.columns.medium-offset-2
+        %h2= @page.title
   - if @page.image? && @page.all_images.size == 1
     .row
       .medium-8.small-centered.columns.medium-offset-2= image_tag @page.image.url
