--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -17,4 +17,41 @@
     line-height: 1.4rem;
     font-weight: 300;
   }
+  
+  .schedule_part {
+    padding: 2.5rem 0;
+    border-bottom: 2px solid black;
+    &.last {
+      border-bottom: none;
+    }
+    h1 {
+      margin-bottom: 0;
+    }
+    address {
+      color: #999;
+    }
+    table {
+      border: 0;
+      margin-top: 1.5rem;
+      tr {
+
+        background-color: white;
+        td {
+          p {
+            font-size: 1.1rem;
+            line-height: 1.7rem;
+          }
+          font-size: 1.1rem;
+          line-height: 1.7rem;
+          padding-bottom: 1.5rem;
+          border: none;
+          min-width: 150px;
+          a {
+            color: #f25c68;
+          }
+        }
+      }
+    }
+  }
 }
+
