symposium mobile fix

--- a/app/assets/stylesheets/exhibitions.css.scss
+++ b/app/assets/stylesheets/exhibitions.css.scss
@@ -327,7 +327,8 @@ footer._exhibitions {
 
           li.select_menu {
             line-height: initial;
-            margin-top: 10px;
+            margin-top: 27px;
+            list-style-type: none;
           }
           .secondary_nav_select {
             margin-top: 28px;
