--- a/app/views/layouts/symposium.html.haml
+++ b/app/views/layouts/symposium.html.haml
@@ -72,7 +72,7 @@
                       %option{selected: (controller.controller_name == 'pages' ? :selected : false), value: page_path('about-symposium') } Statement
                       %option{selected: (controller.controller_name == 'pages' ? :selected : false), value: page_path('schedule')} Schedule
                       %option{class: controller.controller_name == 'registrations' ? :active : false, value: new_registration_path } Registration
-                      %option{selected: (controller.controller_name == 'pages' ? :selected : false), value: page_path('about-symposium') } Participants
+                      %option{selected: (controller.controller_name == 'pages' ? :selected : false), value: '/speakers'} Speakers
                       %option{selected: (controller.controller_name == 'posts' ? :selected : false), value: posts_path } Blog
                       -#%option{selected: (controller.controller_name == 'events' ? :selected : false), value: events_path} Events
                       %option{selected: (controller.controller_name == 'pages' && params[:id] == 'activities'  ? :selected : false), value: page_path('activities')} Activities      
@@ -83,7 +83,7 @@
                   %li.statement{class: controller.controller_name == 'pages' ? :active : false}= link_to 'Statement', page_path('statement')
                   %li.statement{class: controller.controller_name == 'pages' ? :active : false}= link_to 'Schedule', page_path('schedule')
                   %li.statement{class: controller.controller_name == 'registrations' ? :active : false}= link_to 'Registration', new_registration_path
-                  %li{class: controller.controller_name == 'participants' ? :active : false}= link_to 'Participants', participants_path
+                  %li{class: controller.controller_name == 'participants' ? :active : false}= link_to 'Speakers', '/speakers'
                   %li{class: controller.controller_name == 'posts' ? :active : false}= link_to 'Blog', posts_path
                   
           .row.hide-for-small-only
@@ -104,7 +104,7 @@
                   %li.registration{class: controller.controller_name == 'registrations' ? :active : false}
                     %span Registration
                   %li.participants{class: controller.controller_name == 'participants' ? :active : false}
-                    %span Participants
+                    %span Speakers
                   %li{class: controller.controller_name == 'posts' ? :active : false}
                     %span Blog
 
