--- a/app/views/layouts/symposium.html.haml
+++ b/app/views/layouts/symposium.html.haml
@@ -113,7 +113,8 @@
     .symposium_box.show-for-small-only
       .row
         .small-10.columns.text-center.small-centered.small-offset-1
-          The symposium in Helsinki by the Bioartsociety will address core ideas and findings of the HYBRID MATTERs programme.
+          The HYBRID MATTERs Symposium (24-25 November in Helsinki) will
+          address core ideas and findings of the HYBRID MATTERs programme.
     .main-container.symposium
 
 
@@ -127,7 +128,8 @@
           .title= link_to 'SYMPOSIUM', '/'
             
         .blurb.text-center
-          The symposium in Helsinki by the Bioartsociety will address core ideas and findings of the HYBRID MATTERs programme.
+          The HYBRID MATTERs Symposium (24-25 November in Helsinki) will
+          address core ideas and findings of the HYBRID MATTERs programme.
             
       = content_for :jquery do
         :plain  
