--- a/app/assets/stylesheets/calls.css.scss
+++ b/app/assets/stylesheets/calls.css.scss
@@ -115,6 +115,9 @@
         padding-top: 1.5rem;
       }
     }
+    p.inline-hints {
+      font-size: 0.8rem;
+    }
     p.counter {
       float: right;
       font-size: 0.8rem;
