--- a/app/views/registrations/new.html.haml
+++ b/app/views/registrations/new.html.haml
@@ -32,23 +32,28 @@
         .small-7.medium-4.end.columns= f.input :website, label: false
         - listcounter += 1
       
-      .row.has_topline
-        .medium-2.small-offset-1.small-4.columns.text-left.left_form
-          .form_label= "#{listcounter}. Short biography"
-          .hint 1500 char. max
-        .small-7.end.columns
-          = f.input :bio, label: false, as: :text, :maxlength => 1500
-          %p.counter= f.object.new_record? ? "1500 characters remaining" : "#{1500 - f.object.description.length} characters remaining"
-          - listcounter += 1
+      -#.row.has_topline
+      -#  .medium-2.small-offset-1.small-4.columns.text-left.left_form
+      -#    .form_label= "#{listcounter}. Short biography"
+      -#    .hint 1500 char. max
+      -#  .small-7.end.columns
+      -#    = f.input :bio, label: false, as: :text, :maxlength => 1500
+      -#    %p.counter= f.object.new_record? ? "1500 characters remaining" : "#{1500 - f.object.description.length} characters remaining"
+      -#    - listcounter += 1
       .row
         .medium-2.small-offset-1.small-4.columns.text-left.left_form
           .form_label= "#{listcounter}. What are you registering for?"
           .hint.event Check as many as applicable
         .small-7.medium-4.end.columns
           = f.fields_for :symposium_registration, @participant.symposium_registration do |ff|
-            = ff.input :keynote, as: :boolean, label: false
-            = ff.input :symposium, as: :boolean, label: false
-            = ff.input :dinner, as: :boolean, label: false
+            = ff.input :keynote, as: :boolean, label: false, label: 'Key dialogue day (24th November, free entry)'
+            = ff.input :symposium, as: :boolean, label: false, label: 'Panel day (25th November, free entry)'
+            = ff.input :dinner, as: :boolean, label: false, label: 'Dinner (10€, payment info after registration)'
+          - listcounter += 1
+      .row
+        .medium-2.small-offset-1.small-4.columns.text-left.left_form
+          .form_label= "#{listcounter}. Are you a real person?"
+        .small-7.medium-4.end.columns= recaptcha_tags
       .row
         .small-12.medium-4.end.columns.small-offset-3.submit_container= f.submit "Submit", class: [:button, :application ]        
         
