--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -17,9 +17,10 @@
         = link_to image_tag('bioarts.jpg'), 'http://www.bioartsociety.fi/', target: :_blank
         = link_to image_tag('ITcopenhagen.png'), 'http://www.itu.dk/', target: :_blank  
         = link_to image_tag('forumbox.png'), 'http://www.forumbox.fi/', target: :_blank
-        = link_to image_tag('greenland.png'), 'http://kunsthallgrenland.no/', target: :_blank        
+        = link_to image_tag('greenland.png'), 'http://kunsthallgrenland.no/', target: :_blank
         = link_to image_tag('nikolaj.png'), 'http://www.nikolajkunsthal.dk/', target: :_blank
-        = link_to image_tag('malmo.png'), 'http://www.mah.se/', target: :_blank  
+        = link_to image_tag('malmo.png'), 'http://www.mah.se/', target: :_blank
+        
     .row
       .text-center Supporters
       .small-12.columns.partners.small-text-center 
@@ -27,6 +28,7 @@
         = image_tag('cw.png')
         = image_tag('op.png')
         = image_tag('umu_logotyper.jpg')
+        = image_tag('logo_teak.png')
         %br/
         = image_tag('austrian.jpg')
         = image_tag('artsiceland.png')
